// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reindex_catalog.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 1126,
            "relname": "pg_class",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 47,
            "relname": "pg_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "pg_operator",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "pg_database",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 30 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 43,
            "relname": "pg_shdescription",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 216,
            "relname": "pg_class_oid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 47,
            "relname": "pg_class_relname_nsp_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "pg_index_indexrelid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "pg_index_indrelid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 55,
            "relname": "pg_database_oid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 43,
            "relname": "pg_shdescription_o_c_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "ival": {},
                "location": 36,
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "min_parallel_table_scan_size",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "pg_class_oid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 46 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 47,
            "relname": "pg_class_relname_nsp_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "pg_index_indexrelid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 51,
            "relname": "pg_index_indrelid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 55,
            "relname": "pg_database_oid_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ReindexStmt": {
          "kind": "REINDEX_OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 43,
            "relname": "pg_shdescription_o_c_index",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reindex_catalog.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;
